--- a/style.css
+++ b/style.css
@@ -12,15 +12,37 @@
 }
 
 /* BODY */
-body {
-    background: var(--blue-light);
-    color: #333;
+/* DARK MODE VARIABEL */
+body.dark-mode {
+    --bg-color: #121212;
+    --text-color: #f5f5f5;
+    --blue-main: #3399ff;
+    --blue-dark: #0066cc;
+    --blue-light: #1e1e1e;
 }
+
 
 /* NAVBAR */
 header {
     background: linear-gradient(90deg, var(--blue-main), var(--blue-dark));
     padding: 15px;
+}
+/* BUTTON DARK/LIGHT MODE */
+#theme-toggle {
+    margin-left: 15px;
+    padding: 6px 10px;
+    font-size: 18px;
+    border: none;
+    border-radius: 6px;
+    cursor: pointer;
+    background: white;
+    color: var(--blue-main);
+    transition: 0.3s;
+}
+
+#theme-toggle:hover {
+    background: var(--blue-main);
+    color: white;
 }
 
 .nav-container {
